--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 
     implementation('org.jetbrains.kotlin:kotlin-reflect:2.0.20')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+
+    //JSON Parse Error
+    implementation('com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3')
 }
 
 tasks.named('test') {
