--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
     id 'org.springframework.boot' version '2.6.8'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '2.0.20'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0'
 
     // JPA 사용시 기본 생성자 문제 해결
-    id("org.jetbrains.kotlin.plugin.jpa") version "2.0.20"
-    id("org.jetbrains.kotlin.plugin.spring") version "2.0.20"
+    id("org.jetbrains.kotlin.plugin.jpa") version "2.0.0"
+    id("org.jetbrains.kotlin.plugin.spring") version "2.0.0"
+    id("org.jetbrains.kotlin.kapt") version "2.0.0"
 }
 
 group = 'com.group'
@@ -23,11 +24,17 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation('org.jetbrains.kotlin:kotlin-reflect:2.0.20')
+    implementation('org.jetbrains.kotlin:kotlin-reflect:2.0.0')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
     //JSON Parse Error
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3')
+
+    // https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
+    implementation ("com.querydsl:querydsl-jpa:5.0.0")
+    kapt ("com.querydsl:querydsl-apt:5.0.0:jpa")
+    kapt ('org.springframework.boot:spring-boot-configuration-processor')
+
 }
 
 tasks.named('test') {
